--- a/example/pom.xml
+++ b/example/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dropwizard.version>0.9.2</dropwizard.version>
-        <mainClass>com.simple.example.DropwizardReporterExampleApplication</mainClass>
+        <mainClass>io.github.baunz.example.DropwizardReporterExampleApplication</mainClass>
     </properties>
 
     <dependencyManagement>
