--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,9 @@
 name: Build And Test
 
-on: [push]
+on:
+  push:
+    branches:
+      - '**'
 
 jobs:
   build:
@@ -10,7 +13,7 @@ jobs:
       - name: Set up JDK 1.8
         uses: actions/setup-java@v3
         with:
-          java-version: 8.0.345+1
+          java-version: 8
           distribution: adopt
           cache: maven
       - name: Build with Maven
