--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,20 +1,38 @@
-name: Publish package to GitHub Packages
+name: Publish
+
 on:
   release:
-    types: [created]
+    types: [ created ]
+
 jobs:
-  publish:
+  package_and_release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    environment: release
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - id: install-secret-key
+        name: Install gpg secret key
+        run: |
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+          gpg --list-secret-keys --keyid-format LONG
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Java for publishing to Maven Central Repository
+        uses: actions/setup-java@v3
         with:
-          java-version: 1.8.0.345+1
+          java-version: 8
           distribution: adopt
-      - name: Publish package
-        run: mvn --batch-mode deploy
+          cache: maven
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+      - id: publish-to-central
+        name: Publish to the Maven Central Repository
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+        run: |
+          mvn -Prelease \
+            --no-transfer-progress \
+            --batch-mode \
+            -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
+            clean deploy
